Update swagger and routes
