# routes/api.php
@@ -4,7 +4,7 @@ use App\Http\Controllers\v1\AuthController;
 use \App\Http\Controllers\v1\ProjectController;
 use App\Http\Controllers\v1\UserController;
 use App\Http\Controllers\v1\EnumViewController;
-use App\Http\Controllers\v1\ExternalApiController;
+use App\Http\Controllers\v1\ExternalApiViewController;
 
 use Illuminate\Support\Facades\Route;
 
@@ -37,7 +37,7 @@ Route::prefix('v1')->group(function () {
         Route::delete('{type}/{model}/{id}', [EnumViewController::class, 'destroy'])
             ->where('type', 'enums|views');
 
-        Route::get('external', [ExternalApiController::class, 'index']);
+        Route::get('external', [ExternalApiViewController::class, 'index']);
 
         });
 });
